--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ts-crowller-fe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:7001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -11,6 +12,7 @@
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "antd": "^4.16.1",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
